add complete logic

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "6bdf1287",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package words to /home/parsa/nltk_data...\n",
+      "[nltk_data]   Package words is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "from abc import ABC , abstractmethod\n",
-    "class PasswordGenerator:\n",
+    "import nltk\n",
+    "\n",
+    "nltk.download('words')\n",
+    "class PasswordGenerator(ABC):\n",
     "   \n",
     "    @abstractmethod\n",
     "    def generate(self):\n",
@@ -17,7 +29,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
+   "id": "9c202ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "236736"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ad8bbdf8",
    "metadata": {},
    "outputs": [],
@@ -34,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 5,
    "id": "d3ba7ffa",
    "metadata": {},
    "outputs": [],
@@ -57,16 +90,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ef9331e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "class MemorablePasswordGenarator(PasswordGenerator):\n",
+    "    def __init__(self, num_of_word, capital: bool = False, separator = '-', codex = None ):\n",
+    "        self.num_of_word = num_of_word\n",
+    "        self.capital = capital\n",
+    "        self.separator = separator\n",
+    "        if codex is None:\n",
+    "            self.codex = nltk.corpus.words.words()\n",
+    "    \n",
+    "\n",
+    "    def generate(self):\n",
+    "        Password_word= (random.choice(self.codex) for _ in range (self.num_of_word))\n",
+    "\n",
+    "        if self.capital == True:\n",
+    "            Password_word= (word.upper() for word in Password_word)\n",
+    "\n",
+    "        \n",
+    "        return self.separator. join(Password_word)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Number-Guesser-Game-with-Hints",
+   "display_name": "Password-Generator-Dashboard",
    "language": "python",
    "name": "python3"
   },
